dropping unused levels and fixed bug in the order of imputation and conversion to categorical

--- a/notebook/2020-08-13-select-vars/2020-08-13-select-vars.ipynb
+++ b/notebook/2020-08-13-select-vars/2020-08-13-select-vars.ipynb
@@ -18,8 +18,8 @@
     "%reload_ext autoreload\n",
     "from matplotlib import pyplot as plt\n",
     "import pandas as pd\n",
-    "from bsm import individuals\n",
-    "from bsm import preprocessing\n",
+    "from bsmcalls import individuals\n",
+    "from bsmcalls import preprocessing\n",
     "import fwsel\n",
     "import statsmodels as sm\n",
     "%matplotlib inline"
@@ -38,9 +38,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `cleancalls` argument in `bsm.individuals.get_data` takes care of redundant and degenerate variables.\n",
+    "The `cleancalls` argument in `bsmcalls.individuals.get_data` takes care of redundant and degenerate variables.\n",
     "\n",
-    "Below `bsm.preprocessing.preprocess` performs\n",
+    "Below `bsmcalls.preprocessing.preprocess` performs\n",
     "\n",
     "* imputation or removing a variable if the fraction of missing values exceeds 10%\n",
     "* prettifying the variable names (replace whitespace and `./\\:` characters with `_`)\n",
@@ -153,10 +153,10 @@
        "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   7.284</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Thu, 20 Aug 2020</td> <th>  Prob (F-statistic):</th> <td>2.34e-22</td>\n",
+       "  <th>Date:</th>             <td>Fri, 21 Aug 2020</td> <th>  Prob (F-statistic):</th> <td>2.34e-22</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>20:30:17</td>     <th>  Log-Likelihood:    </th> <td> -1929.0</td>\n",
+       "  <th>Time:</th>                 <td>10:55:09</td>     <th>  Log-Likelihood:    </th> <td> -1929.0</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>  3301</td>      <th>  AIC:               </th> <td>   3904.</td>\n",
@@ -268,8 +268,8 @@
        "Dep. Variable:                     Dx   R-squared:                       0.047\n",
        "Model:                            OLS   Adj. R-squared:                  0.040\n",
        "Method:                 Least Squares   F-statistic:                     7.284\n",
-       "Date:                Thu, 20 Aug 2020   Prob (F-statistic):           2.34e-22\n",
-       "Time:                        20:30:17   Log-Likelihood:                -1929.0\n",
+       "Date:                Fri, 21 Aug 2020   Prob (F-statistic):           2.34e-22\n",
+       "Time:                        10:55:09   Log-Likelihood:                -1929.0\n",
        "No. Observations:                3301   AIC:                             3904.\n",
        "Df Residuals:                    3278   BIC:                             4044.\n",
        "Df Model:                          22                                         \n",
@@ -431,7 +431,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f68a8016810>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f3c45b31210>"
       ]
      },
      "execution_count": 10,
@@ -567,10 +567,10 @@
        "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   7.083</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Thu, 20 Aug 2020</td> <th>  Prob (F-statistic):</th> <td>2.09e-22</td>\n",
+       "  <th>Date:</th>             <td>Fri, 21 Aug 2020</td> <th>  Prob (F-statistic):</th> <td>2.09e-22</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>20:30:20</td>     <th>  Log-Likelihood:    </th> <td> -1927.7</td>\n",
+       "  <th>Time:</th>                 <td>10:55:11</td>     <th>  Log-Likelihood:    </th> <td> -1927.7</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>  3301</td>      <th>  AIC:               </th> <td>   3903.</td>\n",
@@ -685,8 +685,8 @@
        "Dep. Variable:                     Dx   R-squared:                       0.047\n",
        "Model:                            OLS   Adj. R-squared:                  0.041\n",
        "Method:                 Least Squares   F-statistic:                     7.083\n",
-       "Date:                Thu, 20 Aug 2020   Prob (F-statistic):           2.09e-22\n",
-       "Time:                        20:30:20   Log-Likelihood:                -1927.7\n",
+       "Date:                Fri, 21 Aug 2020   Prob (F-statistic):           2.09e-22\n",
+       "Time:                        10:55:11   Log-Likelihood:                -1927.7\n",
        "No. Observations:                3301   AIC:                             3903.\n",
        "Df Residuals:                    3277   BIC:                             4050.\n",
        "Df Model:                          23                                         \n",
@@ -749,13 +749,13 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"shell_port\": 46655,\n",
-      "  \"iopub_port\": 60651,\n",
-      "  \"stdin_port\": 49497,\n",
-      "  \"control_port\": 43681,\n",
-      "  \"hb_port\": 35693,\n",
+      "  \"shell_port\": 51679,\n",
+      "  \"iopub_port\": 43703,\n",
+      "  \"stdin_port\": 49807,\n",
+      "  \"control_port\": 58093,\n",
+      "  \"hb_port\": 40613,\n",
       "  \"ip\": \"127.0.0.1\",\n",
-      "  \"key\": \"c2cb6335-4af83cd3b5fdf569c75b9057\",\n",
+      "  \"key\": \"f2c96e47-15d92a9ef1ed6e701e9fc41b\",\n",
       "  \"transport\": \"tcp\",\n",
       "  \"signature_scheme\": \"hmac-sha256\",\n",
       "  \"kernel_name\": \"\"\n",
@@ -764,7 +764,7 @@
       "Paste the above JSON into a file, and connect with:\n",
       "    $> jupyter <app> --existing <file>\n",
       "or, if you are local, you can connect with just:\n",
-      "    $> jupyter <app> --existing kernel-1e3adde5-ca7a-49e6-8e36-485cc8158534.json\n",
+      "    $> jupyter <app> --existing kernel-6499d66e-0592-42ee-80df-fbd2f9601269.json\n",
       "or even just:\n",
       "    $> jupyter <app> --existing\n",
       "if this is the most recent Jupyter kernel you have started.\n"
