updated 3 notebooks with the latest changes in the bsmcalls package

--- a/notebook/2020-06-10-chromatin-state/2020-06-10-chromatin-state.ipynb
+++ b/notebook/2020-06-10-chromatin-state/2020-06-10-chromatin-state.ipynb
@@ -122,11 +122,11 @@
        "      <th>AN</th>\n",
        "      <th>BaseQRankSum</th>\n",
        "      <th>...</th>\n",
+       "      <th>Antidepress</th>\n",
+       "      <th>Lithium</th>\n",
+       "      <th>Alcohol</th>\n",
        "      <th>Illicitsub</th>\n",
        "      <th>causeOfDeath</th>\n",
-       "      <th>Hyperten</th>\n",
-       "      <th>DiabetesInsDep</th>\n",
-       "      <th>DiabetesNonInsDep</th>\n",
        "      <th>EV.1</th>\n",
        "      <th>EV.2</th>\n",
        "      <th>EV.3</th>\n",
@@ -181,10 +181,10 @@
        "      <td>0.517</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0.019061</td>\n",
        "      <td>-0.043151</td>\n",
        "      <td>0.005808</td>\n",
@@ -206,10 +206,10 @@
        "      <td>-2.660</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0.019061</td>\n",
        "      <td>-0.043151</td>\n",
        "      <td>0.005808</td>\n",
@@ -231,10 +231,10 @@
        "      <td>1.420</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0.019061</td>\n",
        "      <td>-0.043151</td>\n",
        "      <td>0.005808</td>\n",
@@ -256,10 +256,10 @@
        "      <td>1.040</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0.019061</td>\n",
        "      <td>-0.043151</td>\n",
        "      <td>0.005808</td>\n",
@@ -281,10 +281,10 @@
        "      <td>1.600</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0.019061</td>\n",
        "      <td>-0.043151</td>\n",
        "      <td>0.005808</td>\n",
@@ -337,8 +337,8 @@
        "      <td>3.680</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0.021532</td>\n",
@@ -362,8 +362,8 @@
        "      <td>-1.118</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0.021532</td>\n",
@@ -388,8 +388,8 @@
        "      <td>5.230</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0.021532</td>\n",
@@ -413,8 +413,8 @@
        "      <td>1.820</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0.021532</td>\n",
@@ -438,8 +438,8 @@
        "      <td>2.430</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0.021532</td>\n",
@@ -450,7 +450,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3301 rows × 61 columns</p>\n",
+       "<p>3301 rows × 56 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -496,6 +496,20 @@
        "                            71258041  C->T      0.04  50         1.820  ...   \n",
        "                            120533592 C->A      0.02  50         2.430  ...   \n",
        "\n",
+       "                                                Antidepress  Lithium  Alcohol  \\\n",
+       "Individual ID Tissue  CHROM POS       Mutation                                  \n",
+       "CMC_MSSM_027  NeuN_pl 1     11973569  C->T                0        0        1   \n",
+       "                            67324428  A->T                0        0        1   \n",
+       "                            182008461 C->T                0        0        1   \n",
+       "                            207598957 C->T                0        0        1   \n",
+       "                            219342012 C->T                0        0        1   \n",
+       "...                                                     ...      ...      ...   \n",
+       "CMC_PITT_118  NeuN_pl 19    29600767  C->T                0        0        0   \n",
+       "                            58291104  C->T                0        0        0   \n",
+       "                      X     5889841   G->A                0        0        0   \n",
+       "                            71258041  C->T                0        0        0   \n",
+       "                            120533592 C->A                0        0        0   \n",
+       "\n",
        "                                                Illicitsub  causeOfDeath  \\\n",
        "Individual ID Tissue  CHROM POS       Mutation                             \n",
        "CMC_MSSM_027  NeuN_pl 1     11973569  C->T               0             1   \n",
@@ -510,63 +524,35 @@
        "                            71258041  C->T               0             1   \n",
        "                            120533592 C->A               0             1   \n",
        "\n",
-       "                                                Hyperten  DiabetesInsDep  \\\n",
-       "Individual ID Tissue  CHROM POS       Mutation                             \n",
-       "CMC_MSSM_027  NeuN_pl 1     11973569  C->T           NaN             NaN   \n",
-       "                            67324428  A->T           NaN             NaN   \n",
-       "                            182008461 C->T           NaN             NaN   \n",
-       "                            207598957 C->T           NaN             NaN   \n",
-       "                            219342012 C->T           NaN             NaN   \n",
-       "...                                                  ...             ...   \n",
-       "CMC_PITT_118  NeuN_pl 19    29600767  C->T             1               0   \n",
-       "                            58291104  C->T             1               0   \n",
-       "                      X     5889841   G->A             1               0   \n",
-       "                            71258041  C->T             1               0   \n",
-       "                            120533592 C->A             1               0   \n",
-       "\n",
-       "                                                DiabetesNonInsDep      EV.1  \\\n",
-       "Individual ID Tissue  CHROM POS       Mutation                                \n",
-       "CMC_MSSM_027  NeuN_pl 1     11973569  C->T                    NaN  0.019061   \n",
-       "                            67324428  A->T                    NaN  0.019061   \n",
-       "                            182008461 C->T                    NaN  0.019061   \n",
-       "                            207598957 C->T                    NaN  0.019061   \n",
-       "                            219342012 C->T                    NaN  0.019061   \n",
-       "...                                                           ...       ...   \n",
-       "CMC_PITT_118  NeuN_pl 19    29600767  C->T                      1  0.021532   \n",
-       "                            58291104  C->T                      1  0.021532   \n",
-       "                      X     5889841   G->A                      1  0.021532   \n",
-       "                            71258041  C->T                      1  0.021532   \n",
-       "                            120533592 C->A                      1  0.021532   \n",
-       "\n",
-       "                                                    EV.2      EV.3      EV.4  \\\n",
+       "                                                    EV.1      EV.2      EV.3  \\\n",
        "Individual ID Tissue  CHROM POS       Mutation                                 \n",
-       "CMC_MSSM_027  NeuN_pl 1     11973569  C->T     -0.043151  0.005808  0.131348   \n",
-       "                            67324428  A->T     -0.043151  0.005808  0.131348   \n",
-       "                            182008461 C->T     -0.043151  0.005808  0.131348   \n",
-       "                            207598957 C->T     -0.043151  0.005808  0.131348   \n",
-       "                            219342012 C->T     -0.043151  0.005808  0.131348   \n",
+       "CMC_MSSM_027  NeuN_pl 1     11973569  C->T      0.019061 -0.043151  0.005808   \n",
+       "                            67324428  A->T      0.019061 -0.043151  0.005808   \n",
+       "                            182008461 C->T      0.019061 -0.043151  0.005808   \n",
+       "                            207598957 C->T      0.019061 -0.043151  0.005808   \n",
+       "                            219342012 C->T      0.019061 -0.043151  0.005808   \n",
        "...                                                  ...       ...       ...   \n",
-       "CMC_PITT_118  NeuN_pl 19    29600767  C->T      0.004611  0.001182  0.035402   \n",
-       "                            58291104  C->T      0.004611  0.001182  0.035402   \n",
-       "                      X     5889841   G->A      0.004611  0.001182  0.035402   \n",
-       "                            71258041  C->T      0.004611  0.001182  0.035402   \n",
-       "                            120533592 C->A      0.004611  0.001182  0.035402   \n",
+       "CMC_PITT_118  NeuN_pl 19    29600767  C->T      0.021532  0.004611  0.001182   \n",
+       "                            58291104  C->T      0.021532  0.004611  0.001182   \n",
+       "                      X     5889841   G->A      0.021532  0.004611  0.001182   \n",
+       "                            71258041  C->T      0.021532  0.004611  0.001182   \n",
+       "                            120533592 C->A      0.021532  0.004611  0.001182   \n",
        "\n",
-       "                                                    EV.5  \n",
-       "Individual ID Tissue  CHROM POS       Mutation            \n",
-       "CMC_MSSM_027  NeuN_pl 1     11973569  C->T     -0.019458  \n",
-       "                            67324428  A->T     -0.019458  \n",
-       "                            182008461 C->T     -0.019458  \n",
-       "                            207598957 C->T     -0.019458  \n",
-       "                            219342012 C->T     -0.019458  \n",
-       "...                                                  ...  \n",
-       "CMC_PITT_118  NeuN_pl 19    29600767  C->T     -0.005080  \n",
-       "                            58291104  C->T     -0.005080  \n",
-       "                      X     5889841   G->A     -0.005080  \n",
-       "                            71258041  C->T     -0.005080  \n",
-       "                            120533592 C->A     -0.005080  \n",
+       "                                                    EV.4      EV.5  \n",
+       "Individual ID Tissue  CHROM POS       Mutation                      \n",
+       "CMC_MSSM_027  NeuN_pl 1     11973569  C->T      0.131348 -0.019458  \n",
+       "                            67324428  A->T      0.131348 -0.019458  \n",
+       "                            182008461 C->T      0.131348 -0.019458  \n",
+       "                            207598957 C->T      0.131348 -0.019458  \n",
+       "                            219342012 C->T      0.131348 -0.019458  \n",
+       "...                                                  ...       ...  \n",
+       "CMC_PITT_118  NeuN_pl 19    29600767  C->T      0.035402 -0.005080  \n",
+       "                            58291104  C->T      0.035402 -0.005080  \n",
+       "                      X     5889841   G->A      0.035402 -0.005080  \n",
+       "                            71258041  C->T      0.035402 -0.005080  \n",
+       "                            120533592 C->A      0.035402 -0.005080  \n",
        "\n",
-       "[3301 rows x 61 columns]"
+       "[3301 rows x 56 columns]"
       ]
      },
      "execution_count": 4,
@@ -587,7 +573,7 @@
     {
      "data": {
       "text/plain": [
-       "\"['REF', 'ALT', 'QUAL', 'FILTER/PASS', 'FILTER/HC', 'FILTER/EXT', 'AC', 'AF', 'AN', 'BaseQRankSum', 'DP', 'DS', 'END', 'ExcessHet', 'FS', 'InbreedingCoeff', 'MLEAC', 'MLEAF', 'MQ', 'MQRankSum', 'NEGATIVE_TRAIN_SITE', 'POSITIVE_TRAIN_SITE', 'QD', 'RAW_MQandDP', 'ReadPosRankSum', 'SOR', 'VQSLOD', 'culprit', 'ChromatinState_DLPFC', 'SiPhyLOD', 'SiPhyBranchLen', 'szdbCNVcount', 'GWASpval', 'evolConstrain', 'Institution', 'Reported Gender', 'Sex', 'Ethnicity', 'ageOfDeath', 'Brain Weight (in grams)', 'PMI (in hours)', 'Dx', 'Year of Autopsy', 'Benzodiazepines', 'Anticonvulsants', 'AntipsychTyp', 'AntipsychAtyp', 'Antidepress', 'Lithium', 'Tobacco', 'Alcohol', 'Illicitsub', 'causeOfDeath', 'Hyperten', 'DiabetesInsDep', 'DiabetesNonInsDep', 'EV.1', 'EV.2', 'EV.3', 'EV.4', 'EV.5']\""
+       "\"['REF', 'ALT', 'QUAL', 'FILTER/PASS', 'FILTER/HC', 'FILTER/EXT', 'AC', 'AF', 'AN', 'BaseQRankSum', 'DP', 'DS', 'END', 'ExcessHet', 'FS', 'InbreedingCoeff', 'MLEAC', 'MLEAF', 'MQ', 'MQRankSum', 'NEGATIVE_TRAIN_SITE', 'POSITIVE_TRAIN_SITE', 'QD', 'RAW_MQandDP', 'ReadPosRankSum', 'SOR', 'VQSLOD', 'culprit', 'ChromatinState_DLPFC', 'SiPhyLOD', 'SiPhyBranchLen', 'szdbCNVcount', 'GWASpval', 'evolConstrain', 'Institution', 'Reported Gender', 'Ethnicity', 'ageOfDeath', 'Brain Weight (in grams)', 'PMI (in hours)', 'Dx', 'Year of Autopsy', 'Benzodiazepines', 'Anticonvulsants', 'AntipsychTyp', 'AntipsychAtyp', 'Antidepress', 'Lithium', 'Alcohol', 'Illicitsub', 'causeOfDeath', 'EV.1', 'EV.2', 'EV.3', 'EV.4', 'EV.5']\""
       ]
      },
      "execution_count": 5,
@@ -736,8 +722,8 @@
      "data": {
       "text/plain": [
        "(<Figure size 800x480 with 2 Axes>,\n",
-       " array([<matplotlib.axes._subplots.AxesSubplot object at 0x7fa375821cd0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7fa3757fb110>],\n",
+       " array([<matplotlib.axes._subplots.AxesSubplot object at 0x7f009fc72950>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f009fc3d310>],\n",
        "       dtype=object))"
       ]
      },
@@ -932,6 +918,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "No variants are observed in the following states:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'BivFlnk', 'EnhBiv'}"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set(readVCF.state15label.values()) - set(state_Dx.index)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -939,7 +952,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fa375797290>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f009fb74690>"
       ]
      },
      "execution_count": 10,
@@ -1322,7 +1335,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fa36c63c710>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f0092a5d690>"
       ]
      },
      "execution_count": 22,
@@ -1355,13 +1368,13 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"shell_port\": 59675,\n",
-      "  \"iopub_port\": 51589,\n",
-      "  \"stdin_port\": 59777,\n",
-      "  \"control_port\": 49051,\n",
-      "  \"hb_port\": 51131,\n",
+      "  \"shell_port\": 42507,\n",
+      "  \"iopub_port\": 52363,\n",
+      "  \"stdin_port\": 42879,\n",
+      "  \"control_port\": 57583,\n",
+      "  \"hb_port\": 60151,\n",
       "  \"ip\": \"127.0.0.1\",\n",
-      "  \"key\": \"d9906e8a-2d24670fff77a7bdc84f75c0\",\n",
+      "  \"key\": \"1df37206-8fde77034de67d5252e8b342\",\n",
       "  \"transport\": \"tcp\",\n",
       "  \"signature_scheme\": \"hmac-sha256\",\n",
       "  \"kernel_name\": \"\"\n",
@@ -1370,7 +1383,7 @@
       "Paste the above JSON into a file, and connect with:\n",
       "    $> jupyter <app> --existing <file>\n",
       "or, if you are local, you can connect with just:\n",
-      "    $> jupyter <app> --existing kernel-ba276f0d-fa4b-437c-8bfa-edc72ef659d6.json\n",
+      "    $> jupyter <app> --existing kernel-29672671-35d0-4a89-b159-b5433a97001c.json\n",
       "or even just:\n",
       "    $> jupyter <app> --existing\n",
       "if this is the most recent Jupyter kernel you have started.\n"
