--- a/notebook/2020-08-19-indiv-based-analysis/2020-08-19-indiv-based-analysis.ipynb
+++ b/notebook/2020-08-19-indiv-based-analysis/2020-08-19-indiv-based-analysis.ipynb
@@ -9,23 +9,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "%reload_ext autoreload\n",
     "from matplotlib import pyplot as plt\n",
     "import pandas as pd\n",
-    "from bsm import individuals\n",
-    "from bsm import readVCF\n",
+    "from bsmcalls import individuals\n",
+    "from bsmcalls import readVCF\n",
     "import statsmodels as sm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -42,13 +51,13 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"shell_port\": 59457,\n",
-      "  \"iopub_port\": 44589,\n",
-      "  \"stdin_port\": 58501,\n",
-      "  \"control_port\": 46721,\n",
-      "  \"hb_port\": 49643,\n",
+      "  \"shell_port\": 34793,\n",
+      "  \"iopub_port\": 49099,\n",
+      "  \"stdin_port\": 47407,\n",
+      "  \"control_port\": 60285,\n",
+      "  \"hb_port\": 45775,\n",
       "  \"ip\": \"127.0.0.1\",\n",
-      "  \"key\": \"1c5afd4c-0a2747ed6e8a0ab06497ccd0\",\n",
+      "  \"key\": \"42a9c761-4b774de6a684d365f05ced6f\",\n",
       "  \"transport\": \"tcp\",\n",
       "  \"signature_scheme\": \"hmac-sha256\",\n",
       "  \"kernel_name\": \"\"\n",
@@ -57,7 +66,7 @@
       "Paste the above JSON into a file, and connect with:\n",
       "    $> jupyter <app> --existing <file>\n",
       "or, if you are local, you can connect with just:\n",
-      "    $> jupyter <app> --existing kernel-d0abaac7-ba87-4b77-84f0-1c17c456bb83.json\n",
+      "    $> jupyter <app> --existing kernel-a0fd0c5d-e5ab-4724-9590-e968200ee6af.json\n",
       "or even just:\n",
       "    $> jupyter <app> --existing\n",
       "if this is the most recent Jupyter kernel you have started.\n"
