aggregating numeric call annotations by mean and std

--- a/notebook/2020-08-19-indiv-based-analysis/2020-08-19-indiv-based-analysis.ipynb
+++ b/notebook/2020-08-19-indiv-based-analysis/2020-08-19-indiv-based-analysis.ipynb
@@ -33,13 +33,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Import calls and clinical data and filter for NeuN+ samples"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "calls, clin = individuals.get_data(merge=False)"
+    "calls, clin = individuals.get_data(merge=False)\n",
+    "calls = calls.loc(axis=0)[:, 'NeuN_pl']"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
