Recursive function to collapse chromatin state categories

--- a/notebook/2020-06-10-annotate-explore-variants/2020-06-10-annotate-explore-variants.ipynb
+++ b/notebook/2020-06-10-annotate-explore-variants/2020-06-10-annotate-explore-variants.ipynb
@@ -846,8 +846,8 @@
      "data": {
       "text/plain": [
        "(<Figure size 800x480 with 2 Axes>,\n",
-       " array([<matplotlib.axes._subplots.AxesSubplot object at 0x7f30f52f9a50>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f30f52c5ed0>],\n",
+       " array([<matplotlib.axes._subplots.AxesSubplot object at 0x7f3ed4ca1dd0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f3ed4c6a190>],\n",
        "       dtype=object))"
       ]
      },
@@ -1076,7 +1076,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f30f5205290>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f3ed4bb0810>"
       ]
      },
      "execution_count": 13,
@@ -1101,6 +1101,22 @@
     "ax[0].grid(True, axis='y')\n",
     "ax[1].vlines(state_Dx_norm.loc['All', 'Control'], *ax[1].get_ylim(), colors='red', linestyles='dashed')\n",
     "state_Dx_norm.plot.barh(stacked=True, ax=ax[1], title='Normalized Count')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Comparison to Autism study by Walsh & Park labs\n",
+    "\n",
+    "Findings on somatic variants in autistic vs control brains in the Walsh & Park labs\n",
+    "\n",
+    "1. \"We did not observe enrichment of overall sSNVs and validated mosaic indels in brain-active enhancers in ASD cases compared to controls; however, we did observe significant enrichment when assessing only sequences bearing active enhancer marks in a majority of brain epigenomes available for analysis (from Roadmap Epigenomics 39 ), reflecting those regions that are most likely to represent critical enhancers shared across individuals.\"\n",
+    "1. \"Furthermore, genes with transcription start sites within 50kb of these shared brain-active enhancers (≥5 brain epigenomes with active enhancer status in the Roadmap data) with mosaic mutations were enriched for brain-specific expression, implying direct functional relevance of enhancer mutations\"\n",
+    "\n",
+    "Our preliminary analysis above suggests a different picture in Schizophrenia.  Altough we only looked included a single epigenome (the one corresponding to DLPFC) from the RoadMap study in this analysis there's not even a slight indication of an enrichment of enhancers in somatic variants in schizophrenic versus control brains.\n",
+    "\n",
+    "The only tendency is the enrichment of transcription start sites (TssA and TssAFlnk) in SCZ somatic variants relative to Control."
    ]
   },
   {
@@ -1459,7 +1475,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f30ec0d7390>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f3ecd1a79d0>"
       ]
      },
      "execution_count": 25,
@@ -1492,13 +1508,13 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"shell_port\": 49473,\n",
-      "  \"iopub_port\": 55943,\n",
-      "  \"stdin_port\": 53081,\n",
-      "  \"control_port\": 41069,\n",
-      "  \"hb_port\": 39481,\n",
+      "  \"shell_port\": 57567,\n",
+      "  \"iopub_port\": 52987,\n",
+      "  \"stdin_port\": 51047,\n",
+      "  \"control_port\": 43651,\n",
+      "  \"hb_port\": 53675,\n",
       "  \"ip\": \"127.0.0.1\",\n",
-      "  \"key\": \"55bfab1c-2760ed1f95a2c2b405b7646b\",\n",
+      "  \"key\": \"7f53cd47-764d4ec2a46e36d38c78cf0c\",\n",
       "  \"transport\": \"tcp\",\n",
       "  \"signature_scheme\": \"hmac-sha256\",\n",
       "  \"kernel_name\": \"\"\n",
@@ -1507,7 +1523,7 @@
       "Paste the above JSON into a file, and connect with:\n",
       "    $> jupyter <app> --existing <file>\n",
       "or, if you are local, you can connect with just:\n",
-      "    $> jupyter <app> --existing kernel-fb71f449-8e93-4b87-99e8-61f43f5fff3a.json\n",
+      "    $> jupyter <app> --existing kernel-204682ee-4c89-4abb-bfdd-7fdc7e3dc939.json\n",
       "or even just:\n",
       "    $> jupyter <app> --existing\n",
       "if this is the most recent Jupyter kernel you have started.\n"
