--- a/notebook/2020-08-19-indiv-based-analysis/2020-08-19-indiv-based-analysis.ipynb
+++ b/notebook/2020-08-19-indiv-based-analysis/2020-08-19-indiv-based-analysis.ipynb
@@ -584,7 +584,7 @@
      "data": {
       "text/plain": [
        "(<Figure size 864x864 with 2 Axes>,\n",
-       " <matplotlib.axes._subplots.AxesSubplot at 0x7f1e49ea3dd0>)"
+       " <matplotlib.axes._subplots.AxesSubplot at 0x7fd4ac366890>)"
       ]
      },
      "execution_count": 6,
@@ -716,10 +716,10 @@
        "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   8.903</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Fri, 28 Aug 2020</td> <th>  Prob (F-statistic):</th> <td>3.35e-12</td>\n",
+       "  <th>Date:</th>             <td>Tue, 01 Sep 2020</td> <th>  Prob (F-statistic):</th> <td>3.35e-12</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>14:00:25</td>     <th>  Log-Likelihood:    </th> <td>  18.279</td>\n",
+       "  <th>Time:</th>                 <td>18:45:05</td>     <th>  Log-Likelihood:    </th> <td>  18.279</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>    85</td>      <th>  AIC:               </th> <td>   21.44</td>\n",
@@ -849,8 +849,8 @@
        "Dep. Variable:                     Dx   R-squared:                       0.817\n",
        "Model:                            OLS   Adj. R-squared:                  0.725\n",
        "Method:                 Least Squares   F-statistic:                     8.903\n",
-       "Date:                Fri, 28 Aug 2020   Prob (F-statistic):           3.35e-12\n",
-       "Time:                        14:00:25   Log-Likelihood:                 18.279\n",
+       "Date:                Tue, 01 Sep 2020   Prob (F-statistic):           3.35e-12\n",
+       "Time:                        18:45:05   Log-Likelihood:                 18.279\n",
        "No. Observations:                  85   AIC:                             21.44\n",
        "Df Residuals:                      56   BIC:                             92.28\n",
        "Df Model:                          28                                         \n",
@@ -1178,7 +1178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1187,7 +1187,7 @@
        "'nCalls_count ~ DP_mean + culprit_entropy + Ethnicity + AF_mean + ReportedGender + DP_std + AntipsychAtyp + YearofAutopsy + Anticonvulsants + szdbCNVcount_std + REF_entropy + EV1 + EV3 + evolConstrain_frequency + Lithium + Antidepress + 1'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1216,10 +1216,10 @@
        "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   10.85</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Fri, 28 Aug 2020</td> <th>  Prob (F-statistic):</th> <td>2.86e-13</td>\n",
+       "  <th>Date:</th>             <td>Tue, 01 Sep 2020</td> <th>  Prob (F-statistic):</th> <td>2.86e-13</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>14:00:45</td>     <th>  Log-Likelihood:    </th> <td> -63.892</td>\n",
+       "  <th>Time:</th>                 <td>18:45:21</td>     <th>  Log-Likelihood:    </th> <td> -63.892</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>    85</td>      <th>  AIC:               </th> <td>   163.8</td>\n",
@@ -1316,8 +1316,8 @@
        "Dep. Variable:           nCalls_count   R-squared:                       0.734\n",
        "Model:                            OLS   Adj. R-squared:                  0.666\n",
        "Method:                 Least Squares   F-statistic:                     10.85\n",
-       "Date:                Fri, 28 Aug 2020   Prob (F-statistic):           2.86e-13\n",
-       "Time:                        14:00:45   Log-Likelihood:                -63.892\n",
+       "Date:                Tue, 01 Sep 2020   Prob (F-statistic):           2.86e-13\n",
+       "Time:                        18:45:21   Log-Likelihood:                -63.892\n",
        "No. Observations:                  85   AIC:                             163.8\n",
        "Df Residuals:                      67   BIC:                             207.8\n",
        "Df Model:                          17                                         \n",
@@ -1365,8 +1365,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Transcription start sites hypothesis\n",
+    "\n",
+    "The above analysis did not suggest involvement of chromatin state in somatic risk variants for schizophrenia.  However, our previous descriptive statistical analysis (2020-06-10-annotate-explore-variants)showed tendency for the enrichment of transcription start sites (TssA and TssAFlnk) in SCZ somatic variants relative to Control.  Why is this discrepancy?\n",
+    "\n",
+    "The discrepancy might have arisen because the `ChromatinState_DLPFC` factor has 15 levels thus increases the degrees of freedom by quite a lot (14 to be precise) in regression models.  Here I test this hypothesis by merging the 15 levels into only two levels: one containing TssA and TssAFlnk while the other all the other 13 chromatin states."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "calls_tss = calls.copy()\n",
+    "s = calls['ChromatinState_DLPFC']\n",
+    "d = {'TssA': ['TssA', 'TssAFlnk'],  'Other': ['TxFlnk', 'Tx', 'TxWk', 'EnhG', 'Enh', 'ZNF/Rpts', 'Het', 'TssBiv', 'ReprPC', 'ReprPCWk', 'Quies']} \n",
+    "calls_tss['ChromatinState_DLPFC'] = preprocessing.collapse_categories(s, d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aggcalls_tss = individuals.agg_calls(calls_tss)\n",
+    "data_tss = pd.concat([aggcalls_tss, clin], axis=1)\n",
+    "data_tss1 = preprocessing.preprocess(data_tss)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data1_tss = data1_tss.drop(columns=cols2drop)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1374,13 +1417,13 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"shell_port\": 33001,\n",
-      "  \"iopub_port\": 55297,\n",
-      "  \"stdin_port\": 33661,\n",
-      "  \"control_port\": 48993,\n",
-      "  \"hb_port\": 60273,\n",
+      "  \"shell_port\": 49589,\n",
+      "  \"iopub_port\": 60941,\n",
+      "  \"stdin_port\": 54041,\n",
+      "  \"control_port\": 45587,\n",
+      "  \"hb_port\": 53617,\n",
       "  \"ip\": \"127.0.0.1\",\n",
-      "  \"key\": \"4c1fbe1c-a47a07fe55db2a37517e0f9e\",\n",
+      "  \"key\": \"67395f7f-4ec968b93fd5c5a3e5d88b1d\",\n",
       "  \"transport\": \"tcp\",\n",
       "  \"signature_scheme\": \"hmac-sha256\",\n",
       "  \"kernel_name\": \"\"\n",
@@ -1389,7 +1432,7 @@
       "Paste the above JSON into a file, and connect with:\n",
       "    $> jupyter <app> --existing <file>\n",
       "or, if you are local, you can connect with just:\n",
-      "    $> jupyter <app> --existing kernel-c8d247fa-02b7-489b-9574-6631d8b21a3c.json\n",
+      "    $> jupyter <app> --existing kernel-c94f6337-a50c-4374-9550-2fb30dc05a3a.json\n",
       "or even just:\n",
       "    $> jupyter <app> --existing\n",
       "if this is the most recent Jupyter kernel you have started.\n"
